AG: bug fixes - accordion chevron on IE8, and carousel on mobile view

--- a/grunt/sass/toolkit/_utility-classes.scss
+++ b/grunt/sass/toolkit/_utility-classes.scss
@@ -121,7 +121,7 @@ body .visible{
 
 .rotate-180 {
   @include transform(rotate(180deg));
-  .lt-ie8 & {
+  .lt-ie9 & {
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
   }
 }
